--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "proyectoqr-backend",
+  "name": "proyectodelfosti-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "clean": "rimraf cache dist",
     "start": "tsc && node dist/app.js",
     "build": "npm run clean && tsc && gulp minify",
@@ -16,31 +17,32 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.16.4",
+    "fast-luhn": "^2.0.2",
     "gulp": "^4.0.2",
     "gulp-uglify-es": "^3.0.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.4.4",
     "uuid": "^8.3.2",
-    "yenv": "^3.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "fast-luhn": "^2.0.2"
+    "yenv": "^3.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
-    "@types/joi": "^17.2.3",
     "@types/jest": "^29.5.11",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongoose": "^5.11.97",
     "@types/uuid": "^8.3.4",
     "gulp": "^4.0.2",
     "gulp-uglify-es": "^3.0.0",
-    "nodemon": "^3.0.1",
+    "jest": "^29.7.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
+    "nodemon": "^3.0.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tslint": "^5.12.1",
     "typescript": "^4.7.4"
   }
