--- a/Serverless/package.json
+++ b/Serverless/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1162.0",
+    "dynamodb-admin": "^4.6.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
